[package]
name = "hirofa_utils"
version = "0.1.3"
authors = ["HiRoFa <info@hirofa.com>"]
edition = "2018"
description = "Utils project which is depended on by several other projects"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
simple-logging = "2.0.2"
thread-id = "3.3.0"
num_cpus = "1.13.0"
lru = "0.6.0"
either = "1.6.0"
linked-hash-map = "0.5.3"
futures="0.3"
tokio = {version = "1", features = ["rt-multi-thread", "rt", "bytes", "fs", "io-std", "io-util", "libc", "macros", "memchr", "winapi", "tracing", "time", "tokio-macros", "test-util", "sync", "parking_lot", "once_cell", "mio", "net", "num_cpus"]}

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]