[package]
name = "hirofa_utils"
version = "0.5.6"
authors = ["HiRoFa <info@hirofa.com>"]
edition = "2018"
description = "Utils project which is depended on by several other projects"
license = "MIT"
repository = "https://github.com/HiRoFa/utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
simple-logging = "2.0.2"
thread-id = "3.3.0"
num_cpus = "1.13.1"
either = "1.6"
linked-hash-map = "0.5.3"
futures="0.3"
tokio = {version = "1", features = ["rt-multi-thread", "rt", "bytes", "fs", "io-std", "io-util", "libc", "macros", "memchr", "tracing", "time", "tokio-macros", "test-util", "sync", "parking_lot", "mio", "net", "num_cpus"]}
string_cache = "0.8"
serde = "1"
serde_json = "1"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]