[package]
name = "hirofa_utils"
version = "0.7.4"
authors = ["HiRoFa <info@hirofa.com>"]
edition = "2018"
description = "Utils project which is depended on by several other projects"
license = "MIT"
repository = "https://github.com/HiRoFa/utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
log = "0.4"
thread-id = "4"
num_cpus = "1"
linked-hash-map = "0.5"
futures="0.3"
tokio = {version = "1", features = ["rt", "rt-multi-thread"]}
string_cache = "0.8"
serde = "1"
serde_json = "1"
rand = "0.8"
parking_lot = "0.12"
anyhow = "1"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]

[dev-dependencies]
criterion = "0.5"
simple-logging = "2"
tokio = {version = "1", features = ["macros"]}

[[bench]]
name = "benchmarks"
harness = false
